--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.4.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.1"
   }
 }
