--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-mdx": "^3.5.1",
+    "gatsby-source-filesystem": "^4.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.1"
