--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^4.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.0",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-mathjax": "^1.0.1"
   }
 }
