--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "bootstrap": "^5.1.3",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-mdx": "^3.5.1",
-    "gatsby-source-filesystem": "^4.5.1",
-    "lodash": "^4.17.21",
-    "react": "^17.0.1",
-    "react-bootstrap": "^2.1.0",
-    "react-dom": "^17.0.1",
+    "@mdx-js/react": "^2.1.2",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-mdx": "^5.0.0",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-sharp": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-mathjax": "^1.0.1"
   }
 }
