--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "gatsby-transformer-sharp": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-mathjax": "^1.0.1"
+    "react-mathjax2": "^0.0.2"
   }
 }
