--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.1.2",
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
